--- a/CustomToast/build.gradle
+++ b/CustomToast/build.gradle
@@ -10,7 +10,7 @@ android {
     defaultConfig {
         minSdk 24
         targetSdk 33
-
+        versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
